--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
+html{
+  background: rgb(154, 246, 154);
+  border-color: none;
+  padding-top: 50px;
+}
+fieldset {
+  border: none;
+}
+.amplify-flex {
+  border: none;
+}
+div {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-top: 5px;
+  border-color: none;
+ font-family:Verdana, Geneva, Tahoma, sans-serif;
+
+}
+button {
+  background-color: black;
+  border-radius: 5px;
   color: white;
+  padding: 5px 15px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: gray;
+  transform: scale(1.1);
 }
